plugins {
    id 'org.springframework.boot' version '4.0.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false

    id "com.diffplug.spotless" version "8.3.0" apply false
    id 'io.openapiprocessor.openapi-processor' version '2026.1' apply false

    id 'base'
    id 'jacoco'

}
repositories {
    mavenCentral()
}


group = 'com.smartjam'
version = '0.0.1-SNAPSHOT'
description = 'Root project for SmartJam'


subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    apply plugin: 'com.diffplug.spotless'

    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'



        testImplementation platform("org.testcontainers:testcontainers-bom:2.0.5")
        testImplementation "org.testcontainers:testcontainers-junit-jupiter"
        testImplementation "org.testcontainers:testcontainers-postgresql"
        testImplementation "org.testcontainers:testcontainers-kafka"
        testImplementation "org.testcontainers:testcontainers-minio"
        testImplementation "com.redis:testcontainers-redis:2.2.2"

        testImplementation 'org.springframework.boot:spring-boot-testcontainers'

        testImplementation 'io.minio:minio:8.5.14'
        testImplementation 'org.springframework.kafka:spring-kafka'

    }


    spotless {
        java {
            targetExclude '**/build/generated/**/*.java'
            palantirJavaFormat("2.89.0").formatJavadoc(true)

            removeUnusedImports()

            importOrder('java', 'jakarta', '', '\\#')

            toggleOffOn()
        }
    }

    tasks.named('test') {
        useJUnitPlatform()

        jvmArgs("-XX:+EnableDynamicAgentLoading")
    }


    jacocoTestReport {
        reports {
            xml.required = true
            html.required = true
        }
    }


    test.finalizedBy jacocoTestReport
    jacocoTestReport.finalizedBy jacocoTestCoverageVerification
}

tasks.register("jacocoRootReport", JacocoReport) {
    group = "Verification"
    description = "Generates an aggregate report from all subprojects"
    dependsOn(subprojects.test)

    executionData.setFrom(files(subprojects.collect { subproject ->
        fileTree(dir: subproject.layout.buildDirectory, include: 'jacoco/test.exec')
    }))

    subprojects.each { subproject ->
        sourceDirectories.from(subproject.sourceSets.main.allSource.srcDirs)
        classDirectories.from(subproject.sourceSets.main.output)
    }

    reports {
        html.required = true
        xml.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco/aggregate/html")
    }
}

build.dependsOn jacocoRootReport